--- a/index.html
+++ b/index.html
@@ -67,22 +67,21 @@
 				<div class="col-lg-7">
 					<ul class="nav-menu">
 						<li><a href="#">Beranda</a></li>
-						<li><a href="about.html">Tentang</a></li>
-						<li><a href="#">Kegiatan</a></li>
-						<li><a href="#">Jurnal</a></li>
-						<li><a href="#">Pages</a>
+						<li><a href="about.html">Info</a>
 							<ul class="nav-dropdown">
-								<li><a href="donate-now.html">donate now</a></li>
-								<li><a href="faq.html">FAQ</a></li>
-								<li><a href="causes.html">Causes</a></li>
-								<li><a href="mission.html">mission</a></li>
-								<li><a href="portfolio.html">portfolio</a></li>
-								<li><a href="pricing.html">pricing</a></li>
-								<li><a href="service.html">service</a></li>
-								<li><a href="team.html">team</a></li>
+								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
+								<li><a href="about.html">Tentang Kami</a></li> 
 								<li><a href="volunteer.html">Relawan</a></li>
+								<li><a href="faq.html">FAQ</a></li>
+								<!-- <li><a href="causes.html">Visi</a></li> -->
+								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
+								<!-- <li><a href="service.html">Target</a></li> -->
+								<!-- <li><a href="team.html">team</a></li> -->
 							</ul>
 						</li>
+						<li><a href="event.html">Program</a></li>
+						<li><a href="blog.html">Blog</a></li>
+						<li><a href="portfolio.html">Galeri</a></li>
 						<li><a href="contact.html">Kontak</a></li>
 						<li><a href="index-en.html">English</a></li>
 					</ul><!-- .nav-menu END -->
@@ -223,7 +222,7 @@
 						If you don't understand how fast and easy it is to so long for your favorite charity on FundPress, please try it. <span>How it works</span> page, <span>Contact us</span>.
 					</blockquote>
 					<a href="#" class="btn btn-primary bg-light-red">
-						<span class="badge"><i class="fa fa-heart"></i></span> Dukung mereka dengan Berdonasi
+						<span class="badge"><i class="fa fa-heart"></i></span> Lihat Lebih banyak cerita
 					</a>
 				</div><!-- .xs-text-content END -->
 			</div>
@@ -326,46 +325,34 @@
 	</div><!-- .container end -->
 </section><!-- End what we do section -->
 
-<!-- become a volunteer section -->
-<section class="parallax-window xs-become-a-volunteer xs-section-padding" style="background-image: url('assets/images/backgrounds/volunteer-bg.jpg')">
+<!-- partners section -->
+<section class="bg-gray xs-partner-section" style="background-image: url('assets/images/map.png');">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-8 col-lg-7">
-				<div class="xs-volunteer-form-wraper volunteer-version-3">
-					<i class="icon-support icon-watermark"></i>
-					<h2>Menjadi Relawan</h2>
-					<p>It only takes a minute to set up a campaign. Decide what to do. Pick a name. Pick a photo. And just like that, you’ll be ready to start raising money.</p>
-					<form action="#" method="POST" id="volunteer-form" class="xs-volunteer-form">
-						<div class="row">
-							<div class="col-lg-6">
-								<input type="text" id="volunteer_name" class="form-control" placeholder="Your Name">
-							</div>
-							<div class="col-lg-6">
-								<input type="email" id="volunteer_email" class="form-control" placeholder="Your Email">
-							</div>
-							<div class="col-lg-6">
-								<select name="branch" class="form-control" id="volunteer_brach">
-									<option value="">Select</option>	
-									<option value="">Branch</option>
-									<option value="">New york</option>
-									<option value="">washington</option>
-								</select>
-							</div>
-							<div class="col-lg-6 xs-mb-20">
-								<div class="xs-fileContainer">
-									<input type="file" id="volunteer_cv" class="form-control" name="file">
-									<label for="volunteer_cv">Upload Your CV</label>
-								</div>
-							</div>
-						</div><!-- .row end -->
-						<textarea name="massage" id="massage" placeholder="Enter your massage" cols="30" class="form-control" rows="10"></textarea>
-						<button type="submit" class="btn btn-primary bg-green">apply now</button>
-					</form><!-- #volunteer-form .xs-volunteer-form END -->
+			<div class="col-lg-5">
+				<div class="xs-partner-content">
+					<div class="xs-heading xs-mb-40">
+						<h2 class="xs-mb-0 xs-title">Kata <span class="color-green">Mereka.</span></h2>
+					</div>
+					<p>William, Rachel dan Stephen telah mengunjungi kopasude dan banyak mendapatkan pengalaman menarik selama disini. Sedangkan Ilham dan Dinda telah menjadi relawan sejak 2017</p>
+					<a href="#" class="btn btn-primary bg-orange">
+						Cari tau Pengalaman Mereka 
+					</a>
 				</div>
+			</div>
+			<div class="col-lg-7">
+				<ul class="fundpress-partners">
+					<li><a href="#"><img src="assets/images/partner/client_1.png" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/partner/client_2.png" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/partner/client_3.png" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/partner/client_4.png" alt=""></a></li>
+					<li><a href="#"><img src="assets/images/partner/client_5.png" alt=""></a></li>
+				
+				</ul>
 			</div>
 		</div><!-- .row end -->
 	</div><!-- .container end -->
-</section><!-- End become a volunteer section -->
+</section><!-- End partners section -->
 
 <!-- events section -->
 <section class="xs-section-padding">
@@ -470,41 +457,12 @@
 	</div><!-- .container end -->
 </section><!-- End events section -->
 
-<!-- partners section -->
-<section class="bg-gray xs-partner-section" style="background-image: url('assets/images/map.png');">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-5">
-				<div class="xs-partner-content">
-					<div class="xs-heading xs-mb-40">
-						<h2 class="xs-mb-0 xs-title">Kata <span class="color-green">Mereka.</span></h2>
-					</div>
-					<p>William, Rachel dan Stephen telah mengunjungi kopasude dan banyak mendapatkan pengalaman menarik selama disini. Sedangkan Ilham dan Dinda telah menjadi relawan sejak 2017</p>
-					<a href="#" class="btn btn-primary bg-orange">
-						Lihat cerita mereka 
-					</a>
-				</div>
-			</div>
-			<div class="col-lg-7">
-				<ul class="fundpress-partners">
-					<li><a href="#"><img src="assets/images/partner/client_1.png" alt=""></a></li>
-					<li><a href="#"><img src="assets/images/partner/client_2.png" alt=""></a></li>
-					<li><a href="#"><img src="assets/images/partner/client_3.png" alt=""></a></li>
-					<li><a href="#"><img src="assets/images/partner/client_4.png" alt=""></a></li>
-					<li><a href="#"><img src="assets/images/partner/client_5.png" alt=""></a></li>
-				
-				</ul>
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</section><!-- End partners section -->
-
 <!-- journal section -->
 <section class="xs-section-padding">
 	<div class="container">
 		<div class="xs-heading row xs-mb-60">
 			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Jurnal</h2>
+				<h2 class="xs-title">Blog</h2>
 				<span class="xs-separetor dashed"></span>
 				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
 			</div><!-- .xs-heading-title END -->
@@ -656,15 +614,13 @@
 							<ul class="xs-footer-list">
 								<li><a href="index.html">Team</a></li>
 								<!-- <li><a href="#">How it works</a></li>-->
-								<li><a href="#">Karir</a></li>
-								<li><a href="#">Humas</a></li>
 								<li><a href="#">Blog</a></li>
 								<li><a href="#">Kontak</a></li>
 							</ul>
 						</div>
 						<div class="col-lg-3 col-md-6 footer-widget">
 							<div class="widget recent-posts">
-								<h3 class="widget-title">Kegiatan mendatang</h3>
+								<h3 class="widget-title">Program mendatang</h3>
 								<ul class="xs-recent-post-widget">
 									<li>
 										<div class="posts-thumb float-left"> 
