--- a/about-en.html
+++ b/about-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Kopasude - Tentang Kami</title>
+		<title>Kopasude - About US</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
@@ -54,24 +54,24 @@
 		<nav class="xs-menus">
 			<div class="nav-header">
 				<div class="nav-toggle"></div>
-				<a href="index.html" class="nav-logo">
+				<a href="index-en.html" class="nav-logo">
 					<img src="assets/images/logo.jpg" alt="">
 				</a>
 			</div><!-- .nav-header END -->
 			<div class="nav-menus-wrapper row">
 				<div class="xs-logo-wraper col-lg-2 xs-padding-0">
-					<a class="nav-brand" href="index.html">
+					<a class="nav-brand" href="index-en.html">
 						<img src="assets/images/logo.jpg" alt="">
 					</a>
 				</div><!-- .xs-logo-wraper END -->
 				<div class="col-lg-7">
 					<ul class="nav-menu">
-						<li><a href="index.html">Beranda</a></li>
-						<li><a href="about.html">Info</a>
+						<li><a href="index-en.html">Home</a></li>
+						<li><a href="about-en.html">Info</a>
 							<ul class="nav-dropdown">
 								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
-								<li><a href="about.html">Tentang Kami</a></li> 
-								<li><a href="volunteer.html">Relawan</a></li>
+								<li><a href="about-en.html">About Us</a></li> 
+								<li><a href="volunteer-en.html">Volunteer</a></li>
 								<!-- <li><a href="faq.html">FAQ</a></li> -->
 								<!-- <li><a href="causes.html">Visi</a></li> -->
 								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
@@ -79,16 +79,16 @@
 								<!-- <li><a href="team.html">team</a></li> -->
 							</ul>
 						</li>
-						<li><a href="event.html">Program</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="portfolio.html">Galeri</a></li>
-						<li><a href="contact.html">Kontak</a></li>
-						<li><a href="index-en.html">English</a></li>
+						<li><a href="event-en.html">Programs</a></li>
+						<li><a href="blog-en.html">Blog</a></li>
+						<li><a href="portfolio-en.html">Gallery</a></li>
+						<li><a href="contact-en.html">Contact</a></li>
+						<li><a href="index.html">Bahasa</a></li>
 					</ul><!-- .nav-menu END -->
 				</div>
 				<div class="xs-navs-button d-flex-center-end col-lg-3">
 					<a href="#" class="btn btn-primary">
-						<span class="badge"><i class="fa fa-heart"></i></span> Buat Donasi Sekarang
+						<span class="badge"><i class="fa fa-heart"></i></span> Make Donation Now
 					</a>
 				</div><!-- .xs-navs-button END -->
 			</div><!-- .nav-menus-wrapper .row END -->
@@ -102,10 +102,10 @@
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
-			<h2>Tentang Kami</h2>
+			<h2>About Us</h2>
 			<p>Give a helping hand for poor people</p>
 			<ul class="xs-breadcumb">
-				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Beranda /</a> Tentang Kami</li>
+				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Home /</a> About</li>
 			</ul>
 		</div>
 	</div>
@@ -145,19 +145,19 @@
 		<div class="row">
 			<div class="col-md-4">
 				<div class="xs-about-feature">
-					<h3>Visi</h3>
+					<h3>Our Mission</h3>
 					<p class="lead">The CharityPress community was named a “Top 25 Best Global Philanthropist” by Barron’s. We beat Oprah. And, Mashable named CharityPress something like that.</p>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="xs-about-feature">
-					<h3>Misi</h3>
+					<h3>Our Vission</h3>
 					<p class="lead">The Globian Fund for Charities seeks positive change around the world through support of non-profit organizations dedicated to social, cultural.</p>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="xs-about-feature">
-					<h3>Nilai-Nilai</h3>
+					<h3>Our Values</h3>
 					<ul class="xs-unorder-list play green-icon">
 						<li>Accountability</li>
 						<li>Reliability</li>
@@ -215,7 +215,7 @@
 	<div class="container">
 		<div class="xs-heading row xs-mb-60">
 			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Agenda</h2>
+				<h2 class="xs-title">What We Do</h2>
 				<span class="xs-separetor dashed"></span>
 				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
 			</div><!-- .xs-heading-title END -->
@@ -258,7 +258,7 @@
 	<div class="container">
 		<div class="xs-heading row xs-mb-60">
 			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Anggota</h2>
+				<h2 class="xs-title">Our Team</h2>
 				<span class="xs-separetor dashed"></span>
 				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
 			</div><!-- .xs-heading-title END -->
@@ -315,7 +315,7 @@
 		</div><!-- .row END -->
 		<div class="text-center">
 			<a href="#" class="btn btn-success">
-				Bergabung bersama kami
+				join with us
 			</a>
 		</div>
 	</div><!-- .container end -->
@@ -329,10 +329,10 @@
 		<div class="xs-footer-top-layer">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 footer-widget xs-pr-20">
-					<a href="index.html" class="xs-footer-logo">
+					<a href="index-en.html" class="xs-footer-logo">
 						<img src="assets/images/logo.jpg" alt="">
 					</a>
-					<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
+					<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 					<ul class="xs-social-list-v2">
 						<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="" class="color-twitter"><i class="fa fa-twitter"></i></a></li>
@@ -341,18 +341,18 @@
 					</ul><!-- .xs-social-list END -->
 				</div>
 				<div class="col-lg-2 col-md-6 footer-widget">
-					<h3 class="widget-title">Tentang Kami</h3>
+					<h3 class="widget-title">About Us</h3>
 					<ul class="xs-footer-list">
-						<li><a href="index.html">Team</a></li>
-						<li><a href="#">karir</a></li>
+						<li><a href="index-en.html">Team</a></li>
+						<li><a href="#">Career</a></li>
 						<!-- <li><a href="#">How it works</a></li>-->
 						<li><a href="#">Blog</a></li>
-						<li><a href="#">Kontak</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-6 footer-widget">
 					<div class="widget recent-posts">
-						<h3 class="widget-title">Program mendatang</h3>
+						<h3 class="widget-title">Upcoming Programs</h3>
 						<ul class="xs-recent-post-widget">
 							<li>
 								<div class="posts-thumb float-left"> 
@@ -406,7 +406,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 footer-widget">
-					<h3 class="widget-title">Hubungi Kami</h3>
+					<h3 class="widget-title">Contact Us</h3>
 					<ul class="xs-info-list">
 						<li><i class="fa fa-home bg-red"></i>Gg. Keluarga, Titi Kuning, Kota Medan, Sumatera Utara 20217, Indonesia.</li>
 						<li><i class="fa fa-phone bg-green"></i>(WA) +62813.7566.7254 atau </br> (Phone) +62813.97720.212</li>
