--- a/blog-en.html
+++ b/blog-en.html
@@ -48,53 +48,53 @@
 			<div class="double-bounce2"></div>
 		</div>
 	</div><!-- #preloader -->
-	<!-- header section -->
-	<header class="xs-header header-transparent">
-		<div class="container">
-			<nav class="xs-menus">
-				<div class="nav-header">
-					<div class="nav-toggle"></div>
-					<a href="index-en.html" class="nav-logo">
+<!-- header section -->
+<header class="xs-header header-transparent">
+	<div class="container">
+		<nav class="xs-menus">
+			<div class="nav-header">
+				<div class="nav-toggle"></div>
+				<a href="index-en.html" class="nav-logo">
+					<img src="assets/images/logo.jpg" alt="">
+				</a>
+			</div><!-- .nav-header END -->
+			<div class="nav-menus-wrapper row">
+				<div class="xs-logo-wraper col-lg-2 xs-padding-0">
+					<a class="nav-brand" href="index-en.html">
 						<img src="assets/images/logo.jpg" alt="">
 					</a>
-				</div><!-- .nav-header END -->
-				<div class="nav-menus-wrapper row">
-					<div class="xs-logo-wraper col-lg-2 xs-padding-0">
-						<a class="nav-brand" href="index-en.html">
-							<img src="assets/images/logo.jpg" alt="">
-						</a>
-					</div><!-- .xs-logo-wraper END -->
-					<div class="col-lg-7">
-						<ul class="nav-menu">
-							<li><a href="index.html">Beranda</a></li>
-							<li><a href="about.html">Info</a>
-								<ul class="nav-dropdown">
-									 <!-- <li><a href="donate-now.html">donate now</a></li> -->
-									<li><a href="about.html">Tentang Kami</a></li> 
-									<li><a href="volunteer.html">Relawan</a></li>
-									<!-- <li><a href="faq.html">FAQ</a></li> -->
-									<!-- <li><a href="causes.html">Visi</a></li> -->
-									<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
-									<!-- <li><a href="service.html">Target</a></li> -->
-									<!-- <li><a href="team.html">team</a></li> -->
-								</ul>
-							</li>
-							<li><a href="event.html">Program</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="portfolio.html">Galeri</a></li>
-							<li><a href="contact.html">Kontak</a></li>
-							<li><a href="index-en.html">English</a></li>
-						</ul><!-- .nav-menu END -->
-					</div>
-					<div class="xs-navs-button d-flex-center-end col-lg-3">
-						<a href="#" class="btn btn-primary">
-							<span class="badge"><i class="fa fa-heart"></i></span> Buat Donasi Sekarang
-						</a>
-					</div><!-- .xs-navs-button END -->
-				</div><!-- .nav-menus-wrapper .row END -->
-			</nav><!-- .xs-menus .fundpress-menu END -->
-		</div><!-- .container end -->
-	</header><!-- End header section -->
+				</div><!-- .xs-logo-wraper END -->
+				<div class="col-lg-7">
+					<ul class="nav-menu">
+						<li><a href="index-en.html">Home</a></li>
+						<li><a href="about-en.html">Info</a>
+							<ul class="nav-dropdown">
+								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
+								<li><a href="about-en.html">About Us</a></li> 
+								<li><a href="volunteer-en.html">Volunteer</a></li>
+								<!-- <li><a href="faq.html">FAQ</a></li> -->
+								<!-- <li><a href="causes.html">Visi</a></li> -->
+								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
+								<!-- <li><a href="service.html">Target</a></li> -->
+								<!-- <li><a href="team.html">team</a></li> -->
+							</ul>
+						</li>
+						<li><a href="event-en.html">Programs</a></li>
+						<li><a href="blog-en.html">Blog</a></li>
+						<li><a href="portfolio-en.html">Gallery</a></li>
+						<li><a href="contact-en.html">Contact</a></li>
+						<li><a href="index.html">Bahasa</a></li>
+					</ul><!-- .nav-menu END -->
+				</div>
+				<div class="xs-navs-button d-flex-center-end col-lg-3">
+					<a href="#" class="btn btn-primary">
+						<span class="badge"><i class="fa fa-heart"></i></span> Make Donation Now
+					</a>
+				</div><!-- .xs-navs-button END -->
+			</div><!-- .nav-menus-wrapper .row END -->
+		</nav><!-- .xs-menus .fundpress-menu END -->
+	</div><!-- .container end -->
+</header><!-- End header section -->
 
 <!-- welcome section -->
 <!--breadcumb start here-->
@@ -105,7 +105,7 @@
 			<h2>Blog</h2>
 			<p>Give a helping hand for poor people</p>
 			<ul class="xs-breadcumb">
-				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Beranda /</a> Blog</li>
+				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Home /</a> Blog</li>
 			</ul>
 		</div>
 	</div>
@@ -499,10 +499,10 @@
 		<div class="xs-footer-top-layer">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 footer-widget xs-pr-20">
-					<a href="index.html" class="xs-footer-logo">
+					<a href="index-en.html" class="xs-footer-logo">
 						<img src="assets/images/logo.jpg" alt="">
 					</a>
-					<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
+					<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 					<ul class="xs-social-list-v2">
 						<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="" class="color-twitter"><i class="fa fa-twitter"></i></a></li>
@@ -511,18 +511,18 @@
 					</ul><!-- .xs-social-list END -->
 				</div>
 				<div class="col-lg-2 col-md-6 footer-widget">
-					<h3 class="widget-title">Tentang Kami</h3>
+					<h3 class="widget-title">About Us</h3>
 					<ul class="xs-footer-list">
-						<li><a href="index.html">Team</a></li>
-						<li><a href="#">karir</a></li>
+						<li><a href="index-en.html">Team</a></li>
+						<li><a href="#">Career</a></li>
 						<!-- <li><a href="#">How it works</a></li>-->
 						<li><a href="#">Blog</a></li>
-						<li><a href="#">Kontak</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-6 footer-widget">
 					<div class="widget recent-posts">
-						<h3 class="widget-title">Program mendatang</h3>
+						<h3 class="widget-title">Upcoming Programs</h3>
 						<ul class="xs-recent-post-widget">
 							<li>
 								<div class="posts-thumb float-left"> 
@@ -576,7 +576,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 footer-widget">
-					<h3 class="widget-title">Hubungi Kami</h3>
+					<h3 class="widget-title">Contact Us</h3>
 					<ul class="xs-info-list">
 						<li><i class="fa fa-home bg-red"></i>Gg. Keluarga, Titi Kuning, Kota Medan, Sumatera Utara 20217, Indonesia.</li>
 						<li><i class="fa fa-phone bg-green"></i>(WA) +62813.7566.7254 atau </br> (Phone) +62813.97720.212</li>
