--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 				</div><!-- .xs-logo-wraper END -->
 				<div class="col-lg-7">
 					<ul class="nav-menu">
-						<li><a href="#">Beranda</a></li>
+						<li><a href="index.html">Beranda</a></li>
 						<li><a href="about.html">Info</a>
 							<ul class="nav-dropdown">
 								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
 								<li><a href="about.html">Tentang Kami</a></li> 
 								<li><a href="volunteer.html">Relawan</a></li>
-								<li><a href="faq.html">FAQ</a></li>
+								<!-- <li><a href="faq.html">FAQ</a></li> -->
 								<!-- <li><a href="causes.html">Visi</a></li> -->
 								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
 								<!-- <li><a href="service.html">Target</a></li> -->
@@ -381,9 +381,9 @@
 						<a href="#">Raspberry velbet</a>
 						<p>In a time of overwhelming emotions, sadness, and pain, obligations.</p>
 						<div class="xs-countdown-timer" data-countdown="2020/01/24"></div>
-						<a href="#" class="btn btn-primary">
+						<!-- <a href="#" class="btn btn-primary">
 							Learn More
-						</a>
+						</a> -->
 					</div><!-- .xs-event-content END -->
 				</div>
 			</div><!-- .xs-single-event END -->
@@ -403,9 +403,9 @@
 						<a href="#">Arsenal, the intelligent.</a>
 						<p>In a time of overwhelming emotions, sadness, and pain, obligations.</p>
 						<div class="xs-countdown-timer" data-countdown="2020/08/24"></div>
-						<a href="#" class="btn btn-primary">
+						<!-- <a href="#" class="btn btn-primary">
 							Learn More
-						</a>
+						</a> -->
 					</div><!-- .xs-event-content END -->
 				</div>
 			</div><!-- .xs-single-event END -->
@@ -425,9 +425,9 @@
 						<a href="#">Waterproof drone that</a>
 						<p>In a time of overwhelming emotions, sadness, and pain, obligations.</p>
 						<div class="xs-countdown-timer" data-countdown="2019/05/24"></div>
-						<a href="#" class="btn btn-primary">
+						<!-- <a href="#" class="btn btn-primary">
 							Learn More
-						</a>
+						</a> -->
 					</div><!-- .xs-event-content END -->
 				</div>
 			</div><!-- .xs-single-event END -->
@@ -447,9 +447,9 @@
 						<a href="">Braille Literacy Tool for.</a>
 						<p>In a time of overwhelming emotions, sadness, and pain, obligations.</p>
 						<div class="xs-countdown-timer" data-countdown="2020/02/24"></div>
-						<a href="#" class="btn btn-primary">
+						<!-- <a href="#" class="btn btn-primary">
 							Learn More
-						</a>
+						</a> -->
 					</div><!-- .xs-event-content END -->
 				</div>
 			</div><!-- .xs-single-event END -->
@@ -613,6 +613,7 @@
 							<h3 class="widget-title">Tentang Kami</h3>
 							<ul class="xs-footer-list">
 								<li><a href="index.html">Team</a></li>
+								<li><a href="#">karir</a></li>
 								<!-- <li><a href="#">How it works</a></li>-->
 								<li><a href="#">Blog</a></li>
 								<li><a href="#">Kontak</a></li>
