--- a/volunteer-en.html
+++ b/volunteer-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Kopasude - Tentang Kami</title>
+		<title>Kopasude - Volunteer</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
@@ -66,12 +66,12 @@
 				</div><!-- .xs-logo-wraper END -->
 				<div class="col-lg-7">
 					<ul class="nav-menu">
-						<li><a href="index.html">Beranda</a></li>
-						<li><a href="about.html">Info</a>
+						<li><a href="index-en.html">Home</a></li>
+						<li><a href="about-en.html">Info</a>
 							<ul class="nav-dropdown">
 								 <!-- <li><a href="donate-now.html">donate now</a></li> -->
-								<li><a href="about.html">Tentang Kami</a></li> 
-								<li><a href="volunteer.html">Relawan</a></li>
+								<li><a href="about-en.html">About Us</a></li> 
+								<li><a href="volunteer-en.html">Volunteer</a></li>
 								<!-- <li><a href="faq.html">FAQ</a></li> -->
 								<!-- <li><a href="causes.html">Visi</a></li> -->
 								<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
@@ -79,16 +79,16 @@
 								<!-- <li><a href="team.html">team</a></li> -->
 							</ul>
 						</li>
-						<li><a href="event.html">Program</a></li>
-						<li><a href="blog.html">Blog</a></li>
-						<li><a href="portfolio.html">Galeri</a></li>
-						<li><a href="contact.html">Kontak</a></li>
-						<li><a href="index-en.html">English</a></li>
+						<li><a href="event-en.html">Programs</a></li>
+						<li><a href="blog-en.html">Blog</a></li>
+						<li><a href="portfolio-en.html">Gallery</a></li>
+						<li><a href="contact-en.html">Contact</a></li>
+						<li><a href="index.html">Bahasa</a></li>
 					</ul><!-- .nav-menu END -->
 				</div>
 				<div class="xs-navs-button d-flex-center-end col-lg-3">
 					<a href="#" class="btn btn-primary">
-						<span class="badge"><i class="fa fa-heart"></i></span> Buat Donasi Sekarang
+						<span class="badge"><i class="fa fa-heart"></i></span> Make Donation Now
 					</a>
 				</div><!-- .xs-navs-button END -->
 			</div><!-- .nav-menus-wrapper .row END -->
@@ -98,14 +98,14 @@
 
 <!-- welcome section -->
 <!--breadcumb start here-->
-<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/about_bg.jpg')">
+<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/volunteer_bg.jpg')">
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
-			<h2>Tentang Kami</h2>
+			<h2>Volunteer</h2>
 			<p>Give a helping hand for poor people</p>
 			<ul class="xs-breadcumb">
-				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Beranda /</a> Tentang Kami</li>
+				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Home /</a> Volunteer</li>
 			</ul>
 		</div>
 	</div>
@@ -114,158 +114,20 @@
 
 
 <main class="xs-main">
-	<!-- video popup section section -->
-	<div class="xs-video-popup-section">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-8 content-center">
-				<div class="xs-video-popup-wraper">
-					<img src="assets/images/video_img.jpg" alt="">
-					<div class="xs-video-popup-content">
-						<a href="https://www.youtube.com/watch?v=Tb1HsAGy-ls" class="xs-video-popup xs-round-btn">
-							<i class="fa fa-play"></i>
-						</a>
-					</div><!-- .xs-video-popup-content end -->
-				</div><!-- .xs-video-popup-wraper end -->
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</div>	<!-- End video popup section section -->
-
-	<!-- video popup section section -->
-	<section class="xs-content-section-padding">
-	<div class="container">
-		<div class="row">
-			<div class="col-lg-11 content-center">
-				<div class="xs-heading xs-mb-100 text-center">
-					<h2 class="xs-mb-0 xs-title">We are an Globian non-profit organization that <span class="color-green">supports</span> good causes and positive change all over the world.</h2>
-				</div>
-			</div>
-		</div><!-- .row end -->
-		<div class="row">
-			<div class="col-md-4">
-				<div class="xs-about-feature">
-					<h3>Visi</h3>
-					<p class="lead">The CharityPress community was named a “Top 25 Best Global Philanthropist” by Barron’s. We beat Oprah. And, Mashable named CharityPress something like that.</p>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="xs-about-feature">
-					<h3>Misi</h3>
-					<p class="lead">The Globian Fund for Charities seeks positive change around the world through support of non-profit organizations dedicated to social, cultural.</p>
-				</div>
-			</div>
-			<div class="col-md-4">
-				<div class="xs-about-feature">
-					<h3>Nilai-Nilai</h3>
-					<ul class="xs-unorder-list play green-icon">
-						<li>Accountability</li>
-						<li>Reliability</li>
-						<li>Cost-effectiveness</li>
-						<li>Personal service</li>
-					</ul>
-				</div>
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</section>	<!-- End video popup section section -->
-
-	<!-- funfacts section -->
-	<div class="xs-funfact-section xs-content-section-padding waypoint-tigger parallax-window" style="background-image: url('assets/images/backgrounds/parallax_1.jpg')">
-	<div class="container">
-		<div class="row col-lg-10 xs-heading mx-auto">
-			<h2 class="xs-title color-white small">Our agency has been present for over 30 years. We make the best for all our children.</h2>
-		</div>
-		<div class="row">
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-donation_2"></i>
-					<span class="number-percentage-count number-percentage" data-value="10" data-animation-duration="3500">0</span><span>M</span>
-					<small>Causes</small>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-group"></i>
-					<span class="number-percentage-count number-percentage" data-value="25" data-animation-duration="3500">0</span><span>k</span>
-					<small>Valunteer</small>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-children"></i>
-					<span class="number-percentage-count number-percentage" data-value="30" data-animation-duration="3500">0</span><span>k</span>
-					<small>Childrens</small>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-planet-earth"></i>
-					<span class="number-percentage-count number-percentage" data-value="14" data-animation-duration="3500">0</span><span>k</span>
-					<small>Countrys</small>
-				</div>
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-	<div class="xs-black-overlay"></div>
-</div>	<!-- End funfacts section -->
-
-	<!-- what we do section -->
-	<section class="xs-section-padding">
-	<div class="container">
-		<div class="xs-heading row xs-mb-60">
-			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Agenda</h2>
-				<span class="xs-separetor dashed"></span>
-				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
-			</div><!-- .xs-heading-title END -->
-		</div><!-- .row end -->
-		<div class="row">
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-water color-orange"></span>
-					<h5>Pure Water <br>For Poor People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-groceries color-red"></span>
-					<h5>Healty Food <br>For Poor People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-heartbeat color-purple"></span>
-					<h5>Medical <br>Facilities for People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-open-book color-green"></span>
-					<h5>Pure Education <br>For Every Children</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</section>	<!-- End what we do section -->
 
 	<!-- team section -->
 	<section class="xs-section-padding bg-gray">
 	<div class="container">
 		<div class="xs-heading row xs-mb-60">
 			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Anggota</h2>
+				<h2 class="xs-title">Our Volunteers</h2>
 				<span class="xs-separetor dashed"></span>
 				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
 			</div><!-- .xs-heading-title END -->
 		</div><!-- .row end -->
-		<div class="row xs-mb-60">
+		<div class="row">
 			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
+				<div class="xs-single-team xs-mb-50">
 					<img src="assets/images/team/team_1.png" alt="">
 					<div class="xs-team-content">
 						<h4>William Khanna</h4>
@@ -277,7 +139,7 @@
 				</div><!-- .xs-single-team END -->
 			</div>
 			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
+				<div class="xs-single-team xs-mb-50">
 					<img src="assets/images/team/team_2.png" alt="">
 					<div class="xs-team-content">
 						<h4>Mr. Aladin</h4>
@@ -289,7 +151,7 @@
 				</div><!-- .xs-single-team END -->
 			</div>
 			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
+				<div class="xs-single-team xs-mb-50">
 					<img src="assets/images/team/team_3.png" alt="">
 					<div class="xs-team-content">
 						<h4>Zummon Khan</h4>
@@ -301,7 +163,7 @@
 				</div><!-- .xs-single-team END -->
 			</div>
 			<div class="col-md-6 col-lg-3">
-				<div class="xs-single-team">
+				<div class="xs-single-team xs-mb-50">
 					<img src="assets/images/team/team_4.png" alt="">
 					<div class="xs-team-content">
 						<h4>Harista Pro</h4>
@@ -312,15 +174,57 @@
 					</div><!-- .xs-team-content END -->
 				</div><!-- .xs-single-team END -->
 			</div>
+			<div class="col-md-6 col-lg-3">
+				<div class="xs-single-team">
+					<img src="assets/images/team/team_5.png" alt="">
+					<div class="xs-team-content">
+						<h4>Banana Halim</h4>
+						<small>Volunteer</small>
+						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
+							<path class="fill-riptide" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
+						</svg>
+					</div><!-- .xs-team-content END -->
+				</div><!-- .xs-single-team END -->
+			</div>
+			<div class="col-md-6 col-lg-3">
+				<div class="xs-single-team">
+					<img src="assets/images/team/team_6.png" alt="">
+					<div class="xs-team-content">
+						<h4>Kumiriano Li</h4>
+						<small>Volunteer</small>
+						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
+							<path class="fill-yellow" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
+						</svg>
+					</div><!-- .xs-team-content END -->
+				</div><!-- .xs-single-team END -->
+			</div>
+			<div class="col-md-6 col-lg-3">
+				<div class="xs-single-team">
+					<img src="assets/images/team/team_7.png" alt="">
+					<div class="xs-team-content">
+						<h4>Tom Rahabi</h4>
+						<small>Volunteer</small>
+						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
+							<path class="fill-green" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
+						</svg>
+					</div><!-- .xs-team-content END -->
+				</div><!-- .xs-single-team END -->
+			</div>
+			<div class="col-md-6 col-lg-3">
+				<div class="xs-single-team">
+					<img src="assets/images/team/team_8.png" alt="">
+					<div class="xs-team-content">
+						<h4>Join Now</h4>
+						<small>Want to join with us</small>
+						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
+							<path class="fill-navy-blue" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
+						</svg>
+					</div><!-- .xs-team-content END -->
+				</div><!-- .xs-single-team END -->
+			</div>
 		</div><!-- .row END -->
-		<div class="text-center">
-			<a href="#" class="btn btn-success">
-				Bergabung bersama kami
-			</a>
-		</div>
 	</div><!-- .container end -->
 </section>	<!-- End team section -->
-
 </main>
 
 <!-- footer section start -->
@@ -329,10 +233,10 @@
 		<div class="xs-footer-top-layer">
 			<div class="row">
 				<div class="col-lg-3 col-md-6 footer-widget xs-pr-20">
-					<a href="index.html" class="xs-footer-logo">
+					<a href="index-en.html" class="xs-footer-logo">
 						<img src="assets/images/logo.jpg" alt="">
 					</a>
-					<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
+					<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 					<ul class="xs-social-list-v2">
 						<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
 						<li><a href="" class="color-twitter"><i class="fa fa-twitter"></i></a></li>
@@ -341,18 +245,18 @@
 					</ul><!-- .xs-social-list END -->
 				</div>
 				<div class="col-lg-2 col-md-6 footer-widget">
-					<h3 class="widget-title">Tentang Kami</h3>
+					<h3 class="widget-title">About Us</h3>
 					<ul class="xs-footer-list">
-						<li><a href="index.html">Team</a></li>
-						<li><a href="#">karir</a></li>
+						<li><a href="index-en.html">Team</a></li>
+						<li><a href="#">Career</a></li>
 						<!-- <li><a href="#">How it works</a></li>-->
 						<li><a href="#">Blog</a></li>
-						<li><a href="#">Kontak</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 				<div class="col-lg-3 col-md-6 footer-widget">
 					<div class="widget recent-posts">
-						<h3 class="widget-title">Program mendatang</h3>
+						<h3 class="widget-title">Upcoming Programs</h3>
 						<ul class="xs-recent-post-widget">
 							<li>
 								<div class="posts-thumb float-left"> 
@@ -406,7 +310,7 @@
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6 footer-widget">
-					<h3 class="widget-title">Hubungi Kami</h3>
+					<h3 class="widget-title">Contact Us</h3>
 					<ul class="xs-info-list">
 						<li><i class="fa fa-home bg-red"></i>Gg. Keluarga, Titi Kuning, Kota Medan, Sumatera Utara 20217, Indonesia.</li>
 						<li><i class="fa fa-phone bg-green"></i>(WA) +62813.7566.7254 atau </br> (Phone) +62813.97720.212</li>
