Update index page

--- a/become-volunteer.html
+++ b/become-volunteer.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Kopasude - Berdonasi</title>
+		<title>Kopasude - Pendaftaran Relawan</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
@@ -102,9 +102,9 @@
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
-			<h2>Berdonasi</h2>
+			<h2>Menjadi Relawan</h2>
 			<ul class="xs-breadcumb">
-				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> beranda /</a> Berdonasi</li>
+				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Beranda /</a> Menjadi Relawan</li>
 			</ul>
 		</div>
 	</div>
@@ -125,7 +125,7 @@
 			<div class="col-lg-6">
 				<div class="xs-donation-form-wraper" >
 					<div class="xs-heading xs-mb-30">
-						<h2 class="xs-title">Bagaimana cara berdonasi untuk Kopasude?</h2>
+						<h2 class="xs-title">Bagaimana cara untuk menjadi Relawan di Kopasude?</h2>
 						<p class="small">To learn more about make donate charity with us visit our "<span class="color-green">Contact us</span>" site. By calling <span class="color-green">+44(0) 800 883 8450</span>.</p>
 						<span class="xs-separetor v2"></span>
 					</div><!-- .xs-heading end -->
