--- a/donate-now-en.html
+++ b/donate-now-en.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="x-ua-compatible" content="ie=edge">
-		<title>Kopasude - Berdonasi</title>
+		<title>Kopasude - Donation</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		
@@ -54,24 +54,24 @@
 			<nav class="xs-menus">
 				<div class="nav-header">
 					<div class="nav-toggle"></div>
-					<a href="index.html" class="nav-logo">
+					<a href="index-en.html" class="nav-logo">
 						<img src="assets/images/logo.jpg" alt="">
 					</a>
 				</div><!-- .nav-header END -->
 				<div class="nav-menus-wrapper row">
 					<div class="xs-logo-wraper col-lg-2 xs-padding-0">
-						<a class="nav-brand" href="index.html">
+						<a class="nav-brand" href="index-en.html">
 							<img src="assets/images/logo.jpg" alt="">
 						</a>
 					</div><!-- .xs-logo-wraper END -->
 					<div class="col-lg-7">
 						<ul class="nav-menu">
-							<li><a href="index.html">Beranda</a></li>
+							<li><a href="index-en.html">Home</a></li>
 							<li><a href="#">Info</a>
 								<ul class="nav-dropdown">
 									 <!-- <li><a href="donate-now.html">donate now</a></li> -->
-									<li><a href="about.html">Tentang Kami</a></li> 
-									<li><a href="volunteer.html">Relawan</a></li>
+									<li><a href="about-en.html">About Us</a></li> 
+									<li><a href="volunteer-en.html">Volunteer</a></li>
 									<!-- <li><a href="faq.html">FAQ</a></li> -->
 									<!-- <li><a href="causes.html">Visi</a></li> -->
 									<!-- <li><a href="mission.html">Visi & Misi</a></li> -->
@@ -79,22 +79,23 @@
 									<!-- <li><a href="team.html">team</a></li> -->
 								</ul>
 							</li>
-							<li><a href="event.html">Program</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="portfolio.html">Galeri</a></li>
-							<li><a href="contact.html">Kontak</a></li>
-							<li><a href="index-en.html">English</a></li>
+							<li><a href="event-en.html">Programs</a></li>
+							<li><a href="blog-en.html">Blog</a></li>
+							<li><a href="portfolio-en.html">Gallery</a></li>
+							<li><a href="contact-en.html">Contact</a></li>
+							<li><a href="index.html">Bahasa</a></li>
 						</ul><!-- .nav-menu END -->
 					</div>
 					<div class="xs-navs-button d-flex-center-end col-lg-3">
-						<a href="donate-now.html" class="btn btn-primary">
-							<span class="badge"><i class="fa fa-heart"></i></span> Buat Donasi
+						<a href="donate-now-en.html" class="btn btn-primary">
+							<span class="badge"><i class="fa fa-heart"></i></span> Make Donation
 						</a>
 					</div><!-- .xs-navs-button END -->
 				</div><!-- .nav-menus-wrapper .row END -->
 			</nav><!-- .xs-menus .fundpress-menu END -->
 		</div><!-- .container end -->
 	</header><!-- End header section -->
+	
 
 <!-- welcome section -->
 <!--breadcumb start here-->
@@ -102,9 +103,10 @@
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
-			<h2>Berdonasi</h2>
+			<h2>Donation</h2>
+			<!-- <p>Give a helping hand for poor people</p> -->
 			<ul class="xs-breadcumb">
-				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> beranda /</a> Berdonasi</li>
+				<li class="badge badge-pill badge-primary"><a href="index.html" class="color-white"> Home /</a> Donation</li>
 			</ul>
 		</div>
 	</div>
@@ -112,7 +114,8 @@
 <!--breadcumb end here--><!-- End welcome section -->
 
 
-<main class="xs-main">	
+<main class="xs-main">
+	
 	<!-- donation form section -->
 	<section class="xs-section-padding bg-gray">
 	<div class="container">
@@ -125,11 +128,11 @@
 			<div class="col-lg-6">
 				<div class="xs-donation-form-wraper" >
 					<div class="xs-heading xs-mb-30">
-						<h2 class="xs-title">Bagaimana cara berdonasi untuk Kopasude?</h2>
+						<h2 class="xs-title">How to Make a Donation for Kopasude?</h2>
 						<p class="small">To learn more about make donate charity with us visit our "<span class="color-green">Contact us</span>" site. By calling <span class="color-green">+44(0) 800 883 8450</span>.</p>
 						<span class="xs-separetor v2"></span>
 					</div><!-- .xs-heading end -->
-					<a href="contact.html" class="btn btn-warning"><span class="badge"><i class="fa fa-heart"></i></span> Hubungi Kami</a>
+					<a href="contact-en.html" class="btn btn-warning"><span class="badge"><i class="fa fa-heart"></i></span> Contact Us</a>
 				</div>
 			</div>
 		</div><!-- .row end -->
@@ -143,26 +146,25 @@
 			<div class="xs-footer-top-layer">
 				<div class="row">
 					<div class="col-lg-3 col-md-6 footer-widget xs-pr-20">
-						<a href="index.html" class="xs-footer-logo">
+						<a href="index-en.html" class="xs-footer-logo">
 							<img src="assets/images/logo.jpg" alt="">
 						</a>
-						<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
+						<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 						<ul class="xs-social-list-v2">
-								<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
-						<h3 class="widget-title">Tentang Kami</h3>
+						<h3 class="widget-title">About Us</h3>
 						<ul class="xs-footer-list">
-							<li><a href="about.html">Team</a></li>
-							<li><a href="blog.html">Blog</a></li>
-							<li><a href="contact.html">Kontak</a></li>
+							<li><a href="about-en.html">Team</a></li>
+							<li><a href="blog-en.html">Blog</a></li>
+							<li><a href="contact-en.html">Contact</a></li>
 						</ul>
 					</div>
-					
 					<div class="col-lg-4 col-md-6 footer-widget">
-						<h3 class="widget-title">Hubungi Kami</h3>
+						<h3 class="widget-title">Contact Us</h3>
 						<ul class="xs-info-list">
 							<li><i class="fa fa-home bg-red"></i>JL. Brigjend Zein Hamid , Gg. Keluarga No. 10, Medan, Sumatera Utara 20217, Indonesia.</li>
 							<li><i class="fa fa-phone bg-green"></i>(WA) +62813.7566.7254 atau </br> (Phone) +62813.97720.212</li>
