finalize the default version

--- a/about.html
+++ b/about.html
@@ -98,7 +98,7 @@
 
 <!-- welcome section -->
 <!--breadcumb start here-->
-<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/about_bg.jpg')">
+<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/volunteer_bg.jpg')">
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
@@ -137,7 +137,9 @@
 		<div class="row">
 			<div class="col-lg-11 content-center">
 				<div class="xs-heading xs-mb-100 text-center">
-					<h2 class="xs-mb-0 xs-title">We are an Globian non-profit organization that <span class="color-green">supports</span> good causes and positive change all over the world.</h2>
+					<h2 class="xs-mb-0 xs-title">Sebuah komunitas
+							yang bertekad untuk membangun kepedulian terhadap <span class="color-green">anak-anak, masyarakat dan lingkungan</span>
+							<br>sekitar sungai Deli.</h2>
 				</div>
 			</div>
 		</div><!-- .row end -->
@@ -145,23 +147,25 @@
 			<div class="col-md-4">
 				<div class="xs-about-feature">
 					<h3>Visi</h3>
-					<p class="lead">The CharityPress community was named a “Top 25 Best Global Philanthropist” by Barron’s. We beat Oprah. And, Mashable named CharityPress something like that.</p>
+					<p class="lead">SAVE ANAK DAN SUNGAI DELI.</p>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="xs-about-feature">
 					<h3>Misi</h3>
-					<p class="lead">The Globian Fund for Charities seeks positive change around the world through support of non-profit organizations dedicated to social, cultural.</p>
+					<p class="lead">Mewujudkan cita-cita dan membangun pola pikir anak bantaran sungai yang bermoral.
+							Mengembalikan fungsi Sungai Deli sebagai ikon wisata kota Medan,<br>
+							Menjaga Pelestarian Hutan Kota dikawasan DAS Deli,<br>
+							Membangun Pola Masyarakat pinggiran Sungai Deli yang mempunyai Ekonomi Kreatif.</p>
 				</div>
 			</div>
 			<div class="col-md-4">
 				<div class="xs-about-feature">
-					<h3>Nilai-Nilai</h3>
+					<h3>Kinerja Kopasude</h3>
 					<ul class="xs-unorder-list play green-icon">
-						<li>Accountability</li>
-						<li>Reliability</li>
-						<li>Cost-effectiveness</li>
-						<li>Personal service</li>
+						<li>Sosialisasi, Pelestarian, dan Penerapan Peduli Lingkungan alam DAS Deli</li>
+						<li>Pengajaran, Pendampingan, dan Pembinaan (Anak dan Masyarakat)</li>
+						<li>Pengembangan Usaha Berbasis Ekonomi Kreatif Masyarakat</li>
 					</ul>
 				</div>
 			</div>
@@ -172,92 +176,44 @@
 	<!-- funfacts section -->
 	<div class="xs-funfact-section xs-content-section-padding waypoint-tigger parallax-window" style="background-image: url('assets/images/backgrounds/parallax_1.jpg')">
 	<div class="container">
+		
 		<div class="row col-lg-10 xs-heading mx-auto">
-			<h2 class="xs-title color-white small">Our agency has been present for over 30 years. We make the best for all our children.</h2>
+			<h2 class="xs-title color-white small">Berdiri sejak 22 Maret 2015,
+					 Kopasude fokus bekerja untuk Anak dan DAS Deli.</h2>
 		</div>
 		<div class="row">
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-donation_2"></i>
-					<span class="number-percentage-count number-percentage" data-value="10" data-animation-duration="3500">0</span><span>M</span>
-					<small>Causes</small>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
-				<div class="xs-single-funFact color-white">
-					<i class="icon-group"></i>
-					<span class="number-percentage-count number-percentage" data-value="25" data-animation-duration="3500">0</span><span>k</span>
-					<small>Valunteer</small>
-				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
+		<div class="col-lg-3 col-md-6">
+				
 				<div class="xs-single-funFact color-white">
 					<i class="icon-children"></i>
-					<span class="number-percentage-count number-percentage" data-value="30" data-animation-duration="3500">0</span><span>k</span>
-					<small>Childrens</small>
+					<span class="number-percentage-count number-percentage" data-value="55" data-animation-duration="2000">0</span>
+					<small>Anak</small>
 				</div>
-			</div>
-			<div class="col-lg-3 col-md-6">
+		</div>
+		<div class="col-lg-3 col-md-6">
 				<div class="xs-single-funFact color-white">
-					<i class="icon-planet-earth"></i>
-					<span class="number-percentage-count number-percentage" data-value="14" data-animation-duration="3500">0</span><span>k</span>
-					<small>Countrys</small>
+					<i class="fa fa-home"></i>
+					<span class="number-percentage-count number-percentage" data-value="3" data-animation-duration="1000">0</span>
+					<small>kampung</small>
 				</div>
-			</div>
+		</div>
+		<div class="col-lg-3 col-md-6">
+				<div class="xs-single-funFact color-white">
+					<i class="fa fa-tree"></i>
+					<span class="number-percentage-count number-percentage" data-value="150" data-animation-duration="2000">0</span>
+					<small>Pohon</small>
+				</div>
+		</div>
 		</div><!-- .row end -->
 	</div><!-- .container end -->
 	<div class="xs-black-overlay"></div>
 </div>	<!-- End funfacts section -->
-
-	<!-- what we do section -->
-	<section class="xs-section-padding">
-	<div class="container">
-		<div class="xs-heading row xs-mb-60">
-			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Agenda</h2>
-				<span class="xs-separetor dashed"></span>
-				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
-			</div><!-- .xs-heading-title END -->
-		</div><!-- .row end -->
-		<div class="row">
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-water color-orange"></span>
-					<h5>Pure Water <br>For Poor People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-groceries color-red"></span>
-					<h5>Healty Food <br>For Poor People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-heartbeat color-purple"></span>
-					<h5>Medical <br>Facilities for People</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-			<div class="col-md-6 col-lg-3">
-				<div class="xs-service-promo">
-					<span class="icon-open-book color-green"></span>
-					<h5>Pure Education <br>For Every Children</h5>
-					<p>663 million people drink dirty water. Learn how access to clean water can improve health, boost local economies.</p>
-				</div><!-- .xs-service-promo END -->
-			</div>
-		</div><!-- .row end -->
-	</div><!-- .container end -->
-</section>	<!-- End what we do section -->
-
 	<!-- team section -->
 	<section class="xs-section-padding bg-gray">
 	<div class="container">
 		<div class="xs-heading row xs-mb-60">
 			<div class="col-md-9 col-xl-9">
-				<h2 class="xs-title">Anggota</h2>
+				<h2 class="xs-title">Pengurus</h2>
 				<span class="xs-separetor dashed"></span>
 				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
 			</div><!-- .xs-heading-title END -->
@@ -312,11 +268,12 @@
 				</div><!-- .xs-single-team END -->
 			</div>
 		</div><!-- .row END -->
-		<div class="text-center">
-			<a href="#" class="btn btn-success">
-				Bergabung bersama kami
-			</a>
-		</div>
+		<!-- <div class="text-center">
+				<a href="#" class="btn btn-success">
+					Bergabung bersama kami
+				</a>
+			</div>
+		-->
 	</div><!-- .container end -->
 </section>	<!-- End team section -->
 
@@ -333,8 +290,8 @@
 						</a>
 						<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
 						<ul class="xs-social-list-v2">
-								<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
