--- a/become-volunteer.html
+++ b/become-volunteer.html
@@ -98,7 +98,7 @@
 
 <!-- welcome section -->
 <!--breadcumb start here-->
-<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/about_bg.jpg')">
+<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/mission_bg.jpg')">
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
@@ -119,14 +119,15 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="xs-donation-form-images">
-					<img src="assets/images/family.jpg" class="img-responsive" alt="Family Images">
+					<img src="assets/images/jadi_volunteer2.png" class="img-responsive" alt="Family Images">
 				</div>
 			</div>
 			<div class="col-lg-6">
 				<div class="xs-donation-form-wraper" >
 					<div class="xs-heading xs-mb-30">
 						<h2 class="xs-title">Bagaimana cara untuk menjadi Relawan di Kopasude?</h2>
-						<p class="small">To learn more about make donate charity with us visit our "<span class="color-green">Contact us</span>" site. By calling <span class="color-green">+44(0) 800 883 8450</span>.</p>
+						<p class="small"><span class="color-green">Terima Kasih atas kepedulian anda</span>.<br> Untuk menjadi Relawan, anda dapat menghubungi pengurus kopasude yang akan 
+							menjelaskan dan menuntun proses pendaftaran anda.</p>
 						<span class="xs-separetor v2"></span>
 					</div><!-- .xs-heading end -->
 					<a href="contact.html" class="btn btn-warning"><span class="badge"><i class="fa fa-heart"></i></span> Hubungi Kami</a>
@@ -148,8 +149,8 @@
 						</a>
 						<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
 						<ul class="xs-social-list-v2">
-								<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
