--- a/portfolio.html
+++ b/portfolio.html
@@ -98,7 +98,7 @@
 
 <!-- welcome section -->
 <!--breadcumb start here-->
-<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/blog_details_header_bg.jpg')">
+<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/pricing_bg.jpg')">
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
@@ -118,48 +118,48 @@
 	<div class="container">
 		<div class="xs-portfolio-grid">
 			<div class="xs-portfolio-grid-item">
-				<a href="assets/images/portfolio/gallery_1.jpg" class="xs-single-portfolio-item xs-image-popup">
-					<img src="assets/images/portfolio/gallery_1.jpg" alt="">
+				<a href="assets/images/portfolio/galeri1.png" class="xs-single-portfolio-item xs-image-popup">
+					<img src="assets/images/portfolio/galeri1.png" alt="">
 					<div class="xs-portfolio-content">
 						<span class="icon-plus-button"></span>
 					</div>
 				</a><!-- .xs-single-portfolio-item END -->
 			</div><!-- .xs-portfolio-grid-item END -->
 			<div class="xs-portfolio-grid-item">
-				<a href="assets/images/portfolio/gallery_2.jpg" class="xs-single-portfolio-item xs-image-popup">
-					<img src="assets/images/portfolio/gallery_2.jpg" alt="">
+				<a href="assets/images/portfolio/galeri2.png" class="xs-single-portfolio-item xs-image-popup">
+					<img src="assets/images/portfolio/galeri2.png" alt="">
 					<div class="xs-portfolio-content">
 						<span class="icon-plus-button"></span>
 					</div>
 				</a><!-- .xs-single-portfolio-item END -->
 			</div><!-- .xs-portfolio-grid-item END -->
 			<div class="xs-portfolio-grid-item">
-				<a href="assets/images/portfolio/gallery_3.jpg" class="xs-single-portfolio-item xs-image-popup">
-					<img src="assets/images/portfolio/gallery_3.jpg" alt="">
+				<a href="assets/images/portfolio/galeri3.png" class="xs-single-portfolio-item xs-image-popup">
+					<img src="assets/images/portfolio/galeri3.png" alt="">
 					<div class="xs-portfolio-content">
 						<span class="icon-plus-button"></span>
 					</div>
 				</a><!-- .xs-single-portfolio-item END -->
 			</div><!-- .xs-portfolio-grid-item END -->
 			<div class="xs-portfolio-grid-item">
-				<a href="assets/images/portfolio/gallery_4.jpg" class="xs-single-portfolio-item xs-image-popup">
-					<img src="assets/images/portfolio/gallery_4.jpg" alt="">
+				<a href="assets/images/portfolio/galeri4.png" class="xs-single-portfolio-item xs-image-popup">
+					<img src="assets/images/portfolio/galeri4.png" alt="">
 					<div class="xs-portfolio-content">
 						<span class="icon-plus-button"></span>
 					</div>
 				</a><!-- .xs-single-portfolio-item END -->
 			</div><!-- .xs-portfolio-grid-item END -->
 			<div class="xs-portfolio-grid-item">
-				<a href="assets/images/portfolio/gallery_5.jpg" class="xs-single-portfolio-item xs-image-popup">
-					<img src="assets/images/portfolio/gallery_5.jpg" alt="">
+				<a href="assets/images/portfolio/galeri5.png" class="xs-single-portfolio-item xs-image-popup">
+					<img src="assets/images/portfolio/galeri5.png" alt="">
 					<div class="xs-portfolio-content">
 						<span class="icon-plus-button"></span>
 					</div>
 				</a><!-- .xs-single-portfolio-item END -->
 			</div><!-- .xs-portfolio-grid-item END -->
 			<div class="xs-portfolio-grid-item xs-portfolio-grid-item-w2">
-				<a href="assets/images/portfolio/gallery_6.jpg" class="xs-single-portfolio-item xs-image-popup">
-					<img src="assets/images/portfolio/gallery_6.jpg" alt="">
+				<a href="assets/images/portfolio/galeri6.png" class="xs-single-portfolio-item xs-image-popup">
+					<img src="assets/images/portfolio/galeri6.png" alt="">
 					<div class="xs-portfolio-content">
 						<span class="icon-plus-button"></span>
 					</div>
@@ -181,8 +181,8 @@
 						</a>
 						<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
 						<ul class="xs-social-list-v2">
-								<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-								<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
