--- a/volunteer.html
+++ b/volunteer.html
@@ -119,7 +119,8 @@
 			<div class="col-md-9 col-xl-9">
 				<h2 class="xs-title">Relawan</h2>
 				<span class="xs-separetor dashed"></span>
-				<p>It allows you to gather monthly subscriptions from fans to help fund your creative projects. They also encourage their users to offer rewards to fans as a way to repay them for their support.</p>
+				<p>Berikut merupakan orang-orang yang mempunyai keinginan kuat untuk mendedikasikan diri mereka
+					untuk masyarakat bersama Kopasude.</p>
 			</div><!-- .xs-heading-title END -->
 		</div><!-- .row end -->
 		<div class="row">
@@ -212,7 +213,7 @@
 					<img src="assets/images/team/team_8.png" alt="">
 					<div class="xs-team-content">
 						<h4>Anda Tertarik?</h4>
-						<small>Ayo Bergabung sekarang</small>
+						<a href="become-volunteer.html" class="xs-footer-logo"><small>Ayo Bergabung sekarang</small></a>
 						<svg class="xs-svgs" preserveAspectRatio="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 270 138">
 							<path class="fill-navy-blue" d="M375,3294H645v128a10,10,0,0,1-10,10l-250-20a10,10,0,0,1-10-10V3294Z" transform="translate(-375 -3294)"/>
 						</svg>
@@ -235,8 +236,8 @@
 					</a>
 					<p>Yayasan Kopasude, Komunitas Peduli Anak & Sungai Deli.</p>
 					<ul class="xs-social-list-v2">
-							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 					</ul><!-- .xs-social-list END -->
 				</div>
 				<div class="col-lg-2 col-md-6 footer-widget">
