--- a/blog-en.html
+++ b/blog-en.html
@@ -98,7 +98,7 @@
 
 <!-- welcome section -->
 <!--breadcumb start here-->
-<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/blog-bg.jpg')">
+<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/parralax_3.jpg')">
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
@@ -171,8 +171,8 @@
 						</a>
 						<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 						<ul class="xs-social-list-v2">
-							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
