--- a/contact-en.html
+++ b/contact-en.html
@@ -120,7 +120,7 @@
 						<div class="xs-contact-form-wraper">
 							<h4>Drop us a line</h4>
 							<div class="xs-contact-details">
-								<img src="assets/images/contact/contact-info-img-1.png" alt="">	
+								<img src="assets/images/contact.png" alt="">	
 							</div>
 						</div><!-- .xs-contact-form-wraper END -->
 					</div>
@@ -150,8 +150,8 @@
 						</a>
 						<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 						<ul class="xs-social-list-v2">
-							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
