--- a/donate-now-en.html
+++ b/donate-now-en.html
@@ -99,7 +99,7 @@
 
 <!-- welcome section -->
 <!--breadcumb start here-->
-<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/about_bg.jpg')">
+<section class="xs-banner-inner-section parallax-window" style="background-image:url('assets/images/backgrounds/parallax_1.jpg')">
 	<div class="xs-black-overlay"></div>
 	<div class="container">
 		<div class="color-white xs-inner-banner-content">
@@ -122,7 +122,7 @@
 		<div class="row">
 			<div class="col-lg-6">
 				<div class="xs-donation-form-images">
-					<img src="assets/images/family.jpg" class="img-responsive" alt="Family Images">
+					<img src="assets/images/berdonasi.png" class="img-responsive" alt="Family Images">
 				</div>
 			</div>
 			<div class="col-lg-6">
@@ -151,8 +151,8 @@
 						</a>
 						<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 						<ul class="xs-social-list-v2">
-							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
