--- a/index-en.html
+++ b/index-en.html
@@ -117,7 +117,7 @@
 			</div><!-- .container end -->
 			<div class="xs-black-overlay"></div>
 		</div><!-- .xs-welcome-content END -->
-		<div class="xs-welcome-content" style="background-image: url(assets/images/slider/slider_2.jpg);">
+		<div class="xs-welcome-content" style="background-image: url(assets/images/slider/slider_6.jpg);">
 			<div class="container">
 				<div class="xs-welcome-wraper color-white">
 					<h2>Hunger is stalking the globe</h2>
@@ -468,8 +468,8 @@
 						</a>
 						<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 						<ul class="xs-social-list-v2">
-							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
