--- a/volunteer-en.html
+++ b/volunteer-en.html
@@ -237,8 +237,8 @@
 						</a>
 						<p>Kopasude Foundation, Children & Sungai Deli Awareness Community.</p>
 						<ul class="xs-social-list-v2">
-							<li><a href="" class="color-facebook"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="" class="color-dribbble"><i class="fa fa-instagram"></i></a></li>
+								<li><a href="https://www.facebook.com/kopasude/"><i class="fa fa-facebook"></i></a></li>
+								<li><a href="https://www.instagram.com/kopasudesu/"><i class="fa fa-instagram"></i></a></li>
 						</ul><!-- .xs-social-list END -->
 					</div>
 					<div class="col-lg-2 col-md-6 footer-widget">
