fix contact footer

--- a/about.html
+++ b/about.html
@@ -153,9 +153,9 @@
 			<div class="col-md-4">
 				<div class="xs-about-feature">
 					<h3>Misi</h3>
-					<p class="lead">Mewujudkan cita-cita dan membangun pola pikir anak bantaran sungai yang bermoral.
-							Mengembalikan fungsi Sungai Deli sebagai ikon wisata kota Medan,<br>
-							Menjaga Pelestarian Hutan Kota dikawasan DAS Deli,<br>
+					<p class="lead">Mewujudkan cita-cita dan membangun pola pikir anak bantaran sungai yang bermoral. <br>
+							Mengembalikan fungsi Sungai Deli sebagai ikon wisata kota Medan.<br>
+							Menjaga Pelestarian Hutan Kota dikawasan DAS Deli.<br>
 							Membangun Pola Masyarakat pinggiran Sungai Deli yang mempunyai Ekonomi Kreatif.</p>
 				</div>
 			</div>
