--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 			<div class="container">
 				<div class="xs-welcome-wraper color-white">
 					<h2>Membina Anak-Anak Sungai Deli</h2>
-					<p>Ratusan anak di bantaran sungai deli perlu akses pendidikan, <br> demi terwujudnya cita-cita dan pola pikir yang bermoral.</p>
+					<p>Ratusan anak di bantaran sungai deli perlu akses pendidikan <br> demi terwujudnya cita-cita dan pola pikir yang bermoral.</p>
 					<div class="xs-btn-wraper">
 						<a href="become-volunteer.html" class="btn btn-outline-primary">
 							Menjadi Relawan
